<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F3"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyStyle"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/name"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="#453C5C" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:theme="@style/MyStyle">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etCollegeName"
            android:hint="@string/college"
            android:drawableStart="@drawable/college"
            android:inputType="text"
            android:textColor="#453C5C"
            android:onClick="selectCollege"
            android:clickable="true"
            android:focusable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:theme="@style/MyStyle">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etStop"
            android:hint="@string/bus_stop"
            android:drawableStart="@drawable/city"
            android:inputType="text"
            android:textColor="#453C5C"
            android:onClick="selectStop"
            android:clickable="true"
            android:focusable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:theme="@style/MyStyle">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:layout_weight="1"
            android:drawableStart="@drawable/email"
            android:hint="@string/email"
            android:textColor="#453C5C"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:theme="@style/MyStyle">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/password"
            android:textColor="#453C5C"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:id="@+id/bRegister"
        android:onClick="onClickRegister"
        android:background="@drawable/buttonshape"
        android:textColor="#453C5C"
        android:textStyle="bold"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bLogInLink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:onClick="onClickLoginLink"
        android:text="@string/already_have_an_account"
        android:textColor="#453C5C"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>

